[package]
name = "eth-hal"
description = "Ethernet framework for microcontrollers in Rust"
version = "0.0.0-zero.1"
readme = "README.md"
keywords = ["no-std", "embedded", "eth", "eth-hal"]
license = "Apache-2.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"
repository = "https://github.com/rust-io-hal/io-hal"

[dependencies]
